# oj-eval-openhands-042-20260424173203

./: CMakeLists.txt  main.cpp  solution.h
