
cmake_minimum_required(VERSION 3.10)
project(SpeedCircularLinkedList)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Set compiler options for better warnings and optimization
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -O2")

# Create the executable
add_executable(code main.cpp)

# Include the current directory for header files
target_include_directories(code PRIVATE .)

